--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,15 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-	<link rel="icon" href="/favicon.png" sizes="any" type="image/png">
-	<link rel="shortcut icon" href="/favicon.png">
-	<link rel="apple-touch-icon" href="/favicon.png">
+	<link rel="icon" href="/Favicon.png" sizes="any" type="image/png">
+	<link rel="shortcut icon" href="/Favicon.png">
+	<link rel="apple-touch-icon" href="/Favicon.png">
 	<link rel="stylesheet" href="/styles.css">
 </head>
 <body>
 	<header class="site-header">
 		<div class="container header-inner">
-			<div class="brand"><img class="brand-logo" src="/favicon.png" alt="Music Nerd Bot logo"> <span>Music Nerd Bot</span></div>
+			<div class="brand"><img class="brand-logo" src="/Favicon.png" alt="Music Nerd Bot logo"> <span>Music Nerd Bot</span></div>
 			<nav class="main-nav">
 				<div class="socials">
 					<a class="social-link" href="https://www.instagram.com/musicnerdxyz?igsh=MWZtOHhuOHZhYWdhdg==" target="_blank" rel="noopener" aria-label="Instagram" title="Instagram">
